home overflow fix

--- a/styles/infoservices.module.css
+++ b/styles/infoservices.module.css
@@ -29,7 +29,7 @@
     flex-direction: column;
     justify-self: center;
     align-items: center;
-    overflow-y: scroll;
+    overflow-x: scroll;
   }
 
   .card {
