--- a/styles/video.module.css
+++ b/styles/video.module.css
@@ -14,5 +14,6 @@
   .container {
     margin: auto;
     width: auto;
+    overflow-y: scroll;
   }
 }
